--- a/frontend/src/styles/navbar.css
+++ b/frontend/src/styles/navbar.css
@@ -160,9 +160,10 @@
 .avatar {
   width: 40px;
   height: 40px;
-  border-radius: 8px;
+  border-radius: 50%;
   object-fit: cover;
-  border: 1px solid #7d7d7d;
+  border: 3px solid #e1e1e1;
+
 }
 
 .dropdown-menu {
